--- a/index.html
+++ b/index.html
@@ -1,106 +1,3 @@
-<!DOCTYPE html>
-<html lang="fa" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>”«Ì  ›—Ê‘ê«ÂÌ</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f1f1f1;
-      color: #333;
-      overflow-x: hidden;
-    }
-    header {
-      background-color: #4e4e50;
-      color: #fff;
-      padding: 20px 0;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2.5em;
-      margin: 0;
-    }
-    nav {
-      background-color: #c0a080;
-      padding: 10px;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-      font-size: 1.2em;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    section {
-      padding: 50px;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-      transition: all 0.3s ease;
-    }
-    .item {
-      background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      transition: transform 0.3s ease-in-out;
-    }
-    .item:hover {
-      transform: scale(1.05);
-    }
-    .item img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-    .item h2 {
-      color: #4e4e50;
-      font-size: 1.5em;
-      margin-top: 10px;
-    }
-    .item p {
-      font-size: 1em;
-      color: #777;
-      margin: 10px 0;
-    }
-    .item .price {
-      font-size: 1.2em;
-      color: #c0a080;
-      font-weight: bold;
-    }
-    .buy-button {
-      background-color: #c0a080;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 1.2em;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .buy-button:hover {
-      background-color: #8b6a4d;
-    }
-    footer {
-      background-color: #4e4e50;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-    /* Motion effects */
-    section {
-      transform: translateY(0);
-    }
-    section:hover {
-      transform: translateY(-10px);
-    }
   </style>
 </head>
 <body>
@@ -126,33 +23,16 @@
     <div class="item">
       <img src="https://via.placeholder.com/300" alt="Espresso Arabica Double">
       <h2>* «”Å—”Ê ⁄—»Ìò« (œ»·) *</h2>
-      <p>«”Å—”Ê œ»· »—«Ì ÿ—›œ«—«‰ ÿ⁄„ ﬁÊÌù —</p>
-      <p class="price">110T</p>
+      <p>«”Å—”Ê œ»· »—«Ì ÿ⁄„ ﬁÊÌ  —</p>
+      <p>ò«ÅÊçÌ‰Ê »« ò—„ ·ÿÌ› Ê ÿ⁄„ œ·Å–Ì—</p>
+      <p class="price">100T</p>
       <button class="buy-button">Œ—Ìœ</button>
     </div>
-    <div class="item">
-      <img src="https://via.placeholder.com/300" alt="Espresso 60-40">
-      <h2>* «”Å—”Ê 60-40 *</h2>
-      <p> —òÌ» «”Å—”Ê ⁄—»Ìò« Ê —»Ê” «</p>
-      <p class="price">75T</p>
-      <button class="buy-button">Œ—Ìœ</button>
-    </div>
-    <div class="item">
-      <img src="https://via.placeholder.com/300" alt="Espresso Robusta Single">
-      <h2>* «”Å—”Ê —»Ê” « (”Ì‰ê·) *</h2>
-      <p>«”Å—”Ê —»Ê” « »« ÿ⁄„Ì ﬁÊÌù —</p>
-      <p class="price">50T</p>
-      <button class="buy-button">Œ—Ìœ</button>
-    </div>
-    <div class="item">
-      <img src="https://via.placeholder.com/300" alt="Americano Arabica">
-      <h2>* ¬„—Ìò‰Ê ⁄—»Ìò« *</h2>
-      <p>¬„—Ìò‰Ê ⁄—»Ìò« »—«Ì ò”«‰Ì òÂ ÿ⁄„ „·«Ì„ „ÌùŒÊ«Â‰œ</p>
-      <p class="price">105T</p>
-      <button class="buy-button">Œ—Ìœ</button>
-    </div>
-    <div class="item">
-      <img src="https://via.placeholder.com/300" alt="Cappuccino">
-      <h2>* ò«ÅÊçÌ‰Ê *</h2>
-      <p>ò
+  </section>
+  <footer>
+    <p>&copy; 2025 ›—Ê‘ê«Â ¬‰·«Ì‰.  „«„ ÕﬁÊﬁ „Õ›ÊŸ «” .</p>
+  </footer>
+</body>
+</html>
+
 
